<resources>
    <string name="app_name">ProtogenSSH</string>
    <string name="nav_header_title">ProtogenSSH</string>
    <string name="nav_header_subtitle">JaredTamana</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Full Face</string>
    <string name="menu_eyes">Eyes</string>
    <string name="menu_mouth">Mouth</string>
    <string name="add_custom_script">Add Custom Script</string>
    <string name="script_name">Script Name</string>
    <string name="script_path">Script Path</string>
    <string name="pattern_location">This pattern goes on:</string>
    <string name="full_face">Full Face</string>
    <string name="eyes_only">Eyes Only</string>
    <string name="mouth_only">Mouth Only</string>

    <string name="settings">Settings</string>
    <string name="buttons_settings">Buttons</string>
    <string name="resetFullFaceUser">Reset Full Face Buttons</string>
    <string name="resetEyesOnlyUser">Reset Eyes Only Buttons</string>
    <string name="resetMouthOnlyUser">Reset Mouth Only Buttons</string>
    <string name="resetAllUser">Reset All Buttons</string>
    <string name="reset_scripts">Reset Scripts</string>
    <string name="reset_full_face_buttons">Reset Full Face Buttons</string>
    <string name="reset_eyes_only_buttons">Reset Eyes Only Buttons</string>
    <string name="reset_mouth_only_buttons">Reset Mouth Only Buttons</string>
    <string name="reset_all_buttons">Reset All Buttons</string>
    <string name="login_credentials">Login Credentials</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="save">Save</string>
    <string name="port">port</string>
    <string name="eyesFile">buttonsEyesOnly.txt</string>
    <string name="fullFaceFile">buttonsFullFace.txt</string>
    <string name="mouthFile">buttonsMouthOnly.txt</string>
    <string name="port_empty_error">Port cannot be empty (default is 22)</string>
    <string name="username_empty_error">Username cannot be blank (default is pi)</string>
    <string name="all_buttons_no">No, Keep My Buttons</string>
    <string name="all_buttons_yes">Yes, I\'m Sure</string>
    <string name="buttons_delete_title">Are you sure?</string>
    <string name="all_buttons_delete_text">Are you sure you want to delete all buttons? This can\'t be undone!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="buttons_delete_text">Are you sure you want to delete these buttons?</string>
    <string name="username_sharedprop">username</string>
    <string name="port_sharedprop">port</string>
    <string name="password_sharedprop">password</string>
    <string name="buttons_deleted_snack">Buttons deleted</string>
    <string name="buttons_save_ioe_snack">Button not saved: IOException</string>
    <string name="buttons_save_fnfe_snack">Button not saved: FileNotFoundException</string>
    <string name="button_saved_snack">Button saved</string>
    <string name="button_load_ioe_snack">Buttons not loaded: IOException</string>
    <string name="npe_add_snack">NullPointerException, not added</string>
    <string name="connect_failed_snack">Failed to connect. Did you connect to the RasPi? Did you add your credentials in Settings?</string>
    <string name="cred_save_fail_snack">Failed to save credentials, please log to dev.</string>
    <string name="cred_save_success_snack">Credentials saved successfully.</string>
    <string name="host_address_ip">host address/IP</string>
    <string name="host_sharedprop">host</string>
    <string name="host_empty_error">Host cannot be empty (default is 192.168.4.1)</string>
    <string name="custom_button_label">Button Label</string>
    <string name="custom_ssh_command">SSH Command</string>
</resources>