<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jaredtamana.protogenssh.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_eyes"
        android:name="com.jaredtamana.protogenssh.ui.eyes.EyesFragment"
        android:label="@string/menu_eyes"
        tools:layout="@layout/fragment_eyes" />

    <fragment
        android:id="@+id/nav_mouth"
        android:name="com.jaredtamana.protogenssh.ui.mouth.MouthFragment"
        android:label="@string/menu_mouth"
        tools:layout="@layout/fragment_mouth" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.jaredtamana.protogenssh.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"
        />
</navigation>