<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/scriptName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/custom_button_label">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/scriptPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/custom_ssh_command">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textRadioHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pattern_location"
            android:layout_marginTop="20dp"
            />

        <RadioButton
            android:id="@+id/radioFullFace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_face"/>
        <RadioButton
            android:id="@+id/radioEyesOnly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eyes_only" />
        <RadioButton
            android:id="@+id/radioMouthOnly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mouth_only" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btnCancelScript"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cancel"
            android:layout_marginHorizontal="5dp">
        </Button>
        <Button
            android:id="@+id/btnApplyScript"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Apply"
            android:layout_marginHorizontal="5dp">
        </Button>
    </LinearLayout>

</LinearLayout>